# custom_news

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
data/: rss_feeds.yaml
data/prompts/: filter_news_system.txt  filter_news_user.txt  generate_script_system.txt  generate_script_user.txt  select_categories_system.txt  select_categories_user.txt
src/: __init__.py  config.py  main.py  pipeline.py
src/database/: crud.py  models.py
src/llm/: __init__.py  base.py  category_selector.py  news_filter.py  openai_client.py  script_generator.py
src/rss/: __init__.py  cache.py  parser.py
src/scheduler/: __init__.py  job_manager.py
src/scraper/: __init__.py  article_extractor.py
src/telegram_bot/: __init__.py  bot.py  handlers.py
src/tts/: __init__.py  base.py  openai_tts.py
src/web/: __init__.py  streamlit_app.py
